force-app/main/default/objects/SEG_UsuariosCSO__c/SEG_UsuariosCSO__c.object-meta.xml
<CustomObject>
    <label>Usuarios CSO</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Usuarios CSO ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Usuarios CSO</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>