force-app/main/default/objects/SEG_UsuariosCSO__c/fields/SEG_GrupoCSO__c.field-meta.xml
<CustomField>
    <fullName>SEG_GrupoCSO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grupo CSO</label>
    <referenceTo>SEG_GruposCSO__c</referenceTo>
    <relationshipLabel>Usuarios</relationshipLabel>
    <relationshipName>Usuarios_CSO</relationshipName>
    <type>Lookup</type>
</CustomField>