force-app/main/default/objects/SEG_UsuariosCSO__c/fields/SEG_Usuario__c.field-meta.xml
<CustomField>
    <fullName>SEG_Usuario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuario</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Usuarios_CSO</relationshipName>
    <type>Lookup</type>
</CustomField>