force-app/main/default/objects/SEG_UsuariosCSO__c/fields/SEG_UsuarioGrupo__c.field-meta.xml
<CustomField>
    <fullName>SEG_UsuarioGrupo__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <label>Usuario-Grupo</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>