force-app/main/default/objects/SEG_UsuariosCSO__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>SEG_Usuario__c</columns>
    <columns>SEG_GrupoCSO__c</columns>
    <columns>SEG_ActivoCSO__c</columns>
    <columns>SEG_UsuarioGrupo__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>